--- a/frontend/src/components/carousel/Carousel.module.css
+++ b/frontend/src/components/carousel/Carousel.module.css
@@ -5,3 +5,67 @@
     background: #364d79;
     overflow: hidden;
 }
+
+.smallImage {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 10px;
+}
+
+.additionalImages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.imageContainer {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.imageDescription {
+    margin-top: 5px;
+    font-size: 14px;
+    color: #333;
+}
+
+.recommendedSection {
+    margin-top: 40px;
+    text-align: left; 
+    padding-left: 20px; 
+}
+
+.recommendedSection h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.hotelContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+}
+
+.hotelItem {
+    text-align: center;
+    width: calc(25% - 10px); 
+    margin-bottom: 20px;
+}
+
+.hotelImage {
+    border-radius: 8px;
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    margin: 10px;
+}
+
+.hotelTitle {
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #333;
+}
